# argopandas

./: .gitignore  Makefile  README.ipynb  README.md  README_pypi.md  argopandas.html  dev.py  float.html  genindex.html  global_index.html  index.html  index_mod.html  interactive.html  mirror.html  netcdf.html  objects.inv  path.html  py-modindex.html  search.html  searchindex.js  setup.cfg
.github/workflows/: build.yaml  check.yaml  docs.yaml  publish.yaml  test-coverage.yaml
_sources/: argopandas.rst.txt  index.rst.txt  interactive.rst.txt  netcdf.rst.txt
argodata/: __init__.py  argodata.py  global_index.py  globals.py  index.py  index_file.py  interactive.py  mirror.py  nc.py  ncfile.py
argopandas/: __init__.py  _geo.py  _interactive.py  data_frame_index.py  downloader.py  float.py  global_index.py  index.py  interactive.py  mirror.py  netcdf.py  path.py  progress.py
dev/: index.html  objects.inv  py-modindex.html  searchindex.js
dev/_sources/: argopandas.rst.txt  index_mod.rst.txt
docs/: README.rst  argopandas.rst  conf.py  index.rst  netcdf.rst  path.rst
released/: index.html
tests/: test_argodata.py  test_argopandas.py  test_data_frame_index.py  test_downloader.py  test_float.py  test_geo.py  test_global_index.py  test_globals.py  test_index.py  test_index_file.py  test_interactive.py  test_mirror.py  test_nc.py  test_ncfile.py  test_netcdf.py  test_path.py  test_progress.py
v0.0.5/: argopandas.html  netcdf.html
v0.0.5/_sources/: float.rst.txt  global_index.rst.txt  mirror.rst.txt
