[metadata]
name = argodata
version = 0.0.1
author = Dewey Dunnington
author_email = dewey.dunnington@dfo-mpo.gc.ca
description = A Python port of the 'argodata' package for R
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paleolimbot/argodata-py
project_urls =
    Bug Tracker = https://github.com/paleolimbot/argodata-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
