[metadata]
name = argopandas
version = 0.0.1
author = Dewey Dunnington
author_email = dewey.dunnington@dfo-mpo.gc.ca
description = A Python port of the 'argopandas' package for R
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paleolimbot/argopandas-py
project_urls =
    Bug Tracker = https://github.com/paleolimbot/argopandas-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    argopandas = argopandas
packages = argopandas
python_requires = >=3.6
install_requires =
    netCDF4
    numpy
    pandas
    pyarrow
